<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.1.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.example</groupId>
	<artifactId>demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>performance</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<useSystemClassLoader>false</useSystemClassLoader>
							<forkCount>3</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>com.lazerycode.jmeter</groupId>
						<artifactId>jmeter-maven-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>configuration</id>
								<goals>
									<goal>configure</goal>
								</goals>
							</execution>
							<execution>
								<id>jmeter-tests</id>
								<goals>
									<goal>jmeter</goal>
								</goals>
							</execution>
							<execution>
								<id>jmeter-check-results</id>
								<goals>
									<goal>results</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
						
							<generateReports>true</generateReports>

							<testFilesDirectory>${project.basedir}/src/test/resources/performance</testFilesDirectory>

							<jMeterProcessJVMSettings>
								<xms>1024</xms>
								<xmx>1024</xmx>
								<arguments>
									<!-- uncomment to get jvm metrics <argument>-Xprof</argument> <argument>-Xfuture</argument> -->
								</arguments>
							</jMeterProcessJVMSettings>

							<!-- <testResultsTimestamp>false</testResultsTimestamp>
							<suppressJMeterOutput>false</suppressJMeterOutput> -->

							<propertiesJMeter>
								<!-- <user.classpath>../lib;</user.classpath> -->
								<plugin_dependency_paths>../../../../lib;</plugin_dependency_paths>
							</propertiesJMeter>

						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
